Revert "Test auto reformat with manual edits"
This reverts commit 5b1de35f98086bbc55456a860b20bd670b9c0e91.